--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -36,6 +36,7 @@ body {
     }
   }
   & > aside {
+    background: rgba(255,255,255,.75);
     position: absolute;
     top: 55px;
     width: 200px;
