--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -42,6 +42,33 @@ body {
     width: 200px;
     z-index: 5;
     outline: 1px solid green;
+    &.hide {
+      transform: translateX(-200px);
+      i {
+        right: -20px;
+        &:hover {
+          background: hsl(141, 71%, 48%)
+        }
+      }
+    }
+    a {
+      text-decoration: none;
+    }
+    i {
+      display: block;
+      cursor: pointer;
+      position: absolute;
+      z-index: 10;
+      right: 0;
+      top: 0;
+      background: #ccc;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      &:hover {
+        background: hsl(348, 100%, 61%);
+      }
+    }
   }
   & > main {
     padding: 0 15px;
