--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -42,12 +42,16 @@ body {
     width: 200px;
     z-index: 5;
     outline: 1px solid green;
+    transition-duration: 1s;
     &.hide {
       transform: translateX(-200px);
       i {
         right: -20px;
+        border: 7px solid #fff;
+        border-left: 7px solid #ccc;
         &:hover {
-          background: hsl(141, 71%, 48%)
+          border: 7px solid #fff;
+          border-left: 7px solid hsl(141, 71%, 48%);
         }
       }
     }
@@ -57,16 +61,15 @@ body {
     i {
       display: block;
       cursor: pointer;
+      transition-duration: 1s;
       position: absolute;
       z-index: 10;
       right: 0;
       top: 0;
-      background: #ccc;
-      border-radius: 50%;
-      width: 15px;
-      height: 15px;
+      border: 7px solid #fff;
+      border-right: 7px solid #ccc;
       &:hover {
-        background: hsl(348, 100%, 61%);
+        border-right: 7px solid hsl(348, 100%, 61%);
       }
     }
   }
