--- a/src/scss/adaptive.scss
+++ b/src/scss/adaptive.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1000px) {
-  .page-wrapper {
+  .wrapper {
     & > main {
       width: 100%;
       min-width: 320px;
