--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -2,7 +2,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto","Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-.page-wrapper {
+.wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
