--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 * { box-sizing: border-box; }
 
 @import "~normalize.css";
+@import "~github-markdown-css";
 @import "scss/layout";
 @import "scss/adaptive";
