--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -83,13 +83,12 @@ body {
   }
   & > main {
     padding: 0 15px;
-    outline: 1px solid red;
     position: relative;
     z-index: 3;
     width: 900px;
     min-height: 500px;
     margin-top: 55px;
     align-self: center;
-    outline: 1px solid deeppink;
+    // outline: 1px solid deeppink;
   }
 }
