--- a/src/style.scss
+++ b/src/style.scss
@@ -4,3 +4,9 @@
 @import "~github-markdown-css";
 @import "scss/layout";
 @import "scss/adaptive";
+
+.markdown-body {
+  h1 {
+    color: maroon;
+  }
+}
