--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,14 @@
 * { box-sizing: border-box; }
+$title-color: maroon;
 
 @import "~normalize.css";
 @import "~github-markdown-css";
 @import "scss/layout";
 @import "scss/adaptive";
 
+
 .markdown-body {
   h1 {
-    color: maroon;
+    color: $title-color;
   }
 }
