--- a/src/style.scss
+++ b/src/style.scss
@@ -11,4 +11,8 @@ $title-color: maroon;
   h1 {
     color: $title-color;
   }
+  pre {
+    // background: rgba(0,0,0, .88);
+    // color: #fff;
+  }
 }
