--- a/src/components/layout/scss/adaptive.scss
+++ b/src/components/layout/scss/adaptive.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1000px) {
-  .wrapper {
+  .app-wrapper {
     & > main {
       width: 100%;
       min-width: 320px;
