--- a/src/components/layout/Aside/styles.scss
+++ b/src/components/layout/Aside/styles.scss
@@ -1,11 +1,11 @@
 aside {
-  background: rgba(123,123,123,.9);
+  background: rgba(123,123,123,.75);
   border-radius: 0 5px 5px 0;
   position: fixed;
   top: 55px;
   width: 200px;
   z-index: 5;
-  transition-duration: .5s;
+  transition-duration: 230ms;
 
   &.hide {
     transform: translateX(-200px);
