--- a/src/components/layout/Header/styles.scss
+++ b/src/components/layout/Header/styles.scss
@@ -47,6 +47,10 @@ header {
             background-color: #fff;
             border: 1px solid darkmagenta;
             cursor: default;
+            &__done {
+              background-color: lightgreen;
+              color: #000;
+            }
           }
         }
       }
