--- a/src/components/layout/Footer/styles.scss
+++ b/src/components/layout/Footer/styles.scss
@@ -1,14 +1,22 @@
 footer {
-  margin-top: auto;
-  text-align: right;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   a {
-    font-size: 1.25rem;
     display: inline-flex;
-    padding: 10px;
+    font-size: 1.25rem;
+    line-height: 1.25rem;
+    width: 20px;
+    height: 20px;
+    justify-content: center;
     text-decoration: none;
     color: #61dafb;
-    &:hover {
-      color: #000;
-    }
+
+    &:hover { color: #000; }
   }
 }
