--- a/src/components/layout/scss/layout.scss
+++ b/src/components/layout/scss/layout.scss
@@ -14,7 +14,7 @@ body {
     position: relative;
     z-index: 3;
     width: 900px;
-    min-height: 500px;
+    // min-height: 500px;
     margin-top: 25px;
     align-self: center;
   }
