--- a/src/components/layout/Aside/styles.scss
+++ b/src/components/layout/Aside/styles.scss
@@ -3,12 +3,12 @@ aside {
   border-radius: 0 5px 5px 0;
   position: fixed;
   top: 55px;
-  width: 200px;
+  width: 160px;
   z-index: 5;
   transition-duration: 230ms;
 
   &.hide {
-    transform: translateX(-200px);
+    transform: translateX(-160px);
 
     i {
       right: -20px;
@@ -23,6 +23,7 @@ aside {
 
   ul.links-list {
     list-style: none;
+    padding-left: 30px;
 
     li {
       padding: 3px 0;
@@ -41,7 +42,7 @@ aside {
     &.active {
       &::before {
         position: absolute;
-        left: 20px;
+        left: 10px;
         content: "►";
       }
 
