--- a/src/components/Layout/Aside/styles.scss
+++ b/src/components/Layout/Aside/styles.scss
@@ -7,21 +7,22 @@ aside {
   z-index: 5;
   transition-duration: 230ms;
   max-height: 90vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  // overflow-y: scroll;
+  // overflow-x: auto;
+  // overflow-x: hidden;
 
-  // for Webkit
-  &::-webkit-scrollbar { width: 7px; height: 7px; } // width and height
-  &::-webkit-scrollbar-track { background: transparent; } // track
-  &::-webkit-scrollbar-thumb {
-    background: #ccc;
-    border-radius: 10px;
-  } // handle
-  &::-webkit-scrollbar-thumb:hover { background: #bbb; } // handle on hover
+  // // for Webkit
+  // &::-webkit-scrollbar { width: 7px; height: 7px; } // width and height
+  // &::-webkit-scrollbar-track { background: transparent; } // track
+  // &::-webkit-scrollbar-thumb {
+  //   background: #ccc;
+  //   border-radius: 10px;
+  // } // handle
+  // &::-webkit-scrollbar-thumb:hover { background: #bbb; } // handle on hover
 
-  // for Mozilla Firefox
-  scrollbar-color: #ddd #fff;
-  scrollbar-width: thin;
+  // // for Mozilla Firefox
+  // scrollbar-color: #ddd #fff;
+  // scrollbar-width: thin;
 
   &.hide {
     transform: translateX(-160px);
