--- a/src/style.scss
+++ b/src/style.scss
@@ -7,7 +7,6 @@ $title-color: maroon;
 
 .markdown-body {
   background: #d8f4f7;
-  h1 {
-    color: $title-color;
-  }
+
+  h1 { color: $title-color; }
 }
