--- a/src/components/Layout/scss/layout.scss
+++ b/src/components/Layout/scss/layout.scss
@@ -9,8 +9,10 @@ body {
   position: relative;
 
   main {
-    padding: 0 15px;
-    padding-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+    padding-right: 15px;
     position: relative;
     z-index: 3;
     width: 900px;
