--- a/src/components/Layout/scss/adaptive.scss
+++ b/src/components/Layout/scss/adaptive.scss
@@ -64,7 +64,10 @@
         }
       }
 
-      & + main { padding-left: 15px; }
+      & + main {
+        padding-left: 15px;
+        padding-top: 15px;
+      }
     }
   }
 }
