--- a/src/components/Layout/Aside/styles.scss
+++ b/src/components/Layout/Aside/styles.scss
@@ -2,27 +2,28 @@ aside {
   background: rgba(123,123,123,.75);
   border-radius: 0 5px 5px 0;
   position: fixed;
+  padding: 15px 30px;
   top: 26px;
   width: 160px;
   z-index: 5;
   transition-duration: 230ms;
-  max-height: 90vh;
-  // overflow-y: scroll;
-  // overflow-x: auto;
-  // overflow-x: hidden;
+  max-height: calc(100vh - 26px);
+  overflow-y: scroll;
+  overflow-x: auto;
+  overflow-x: hidden;
 
-  // // for Webkit
-  // &::-webkit-scrollbar { width: 7px; height: 7px; } // width and height
-  // &::-webkit-scrollbar-track { background: transparent; } // track
-  // &::-webkit-scrollbar-thumb {
-  //   background: #ccc;
-  //   border-radius: 10px;
-  // } // handle
-  // &::-webkit-scrollbar-thumb:hover { background: #bbb; } // handle on hover
+  // for Webkit
+  &::-webkit-scrollbar { width: 7px; height: 7px; } // width and height
+  &::-webkit-scrollbar-track { background: transparent; } // track
+  &::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 10px;
+  } // handle
+  &::-webkit-scrollbar-thumb:hover { background: #bbb; } // handle on hover
 
-  // // for Mozilla Firefox
-  // scrollbar-color: #ddd #fff;
-  // scrollbar-width: thin;
+  // for Mozilla Firefox
+  scrollbar-color: #ddd #fff;
+  scrollbar-width: thin;
 
   &.hide {
     transform: translateX(-160px);
@@ -41,10 +42,30 @@ aside {
 
   ul.links-list {
     list-style: none;
-    padding-left: 30px;
+    padding: 0;
+    margin: 0;
 
     li {
       padding: 3px 0;
+
+      a {
+        position: relative;
+        display: inline-flex;
+
+        &.divider {
+          margin-top: 10px;
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: -8px;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: #fff;
+          }
+        }
+      }
     }
   }
 
@@ -60,7 +81,7 @@ aside {
     &.active {
       &::before {
         position: absolute;
-        left: 10px;
+        left: -20px;
         content: "►";
       }
 
@@ -70,19 +91,28 @@ aside {
     }
   }
 
-  i {
+  & + .sidebar-toggler {
     display: block;
+    position: fixed;
+    width: 16px;
+    height: 16px;
+    top: 5px;
+    left: 30px;
+    z-index: 10;
     cursor: pointer;
     transition-duration: .5s;
-    position: absolute;
-    z-index: 10;
-    right: -10px;
-    top: 5px;
-    border: 7px solid transparent;
-    border-right: 7px solid #888;
+    border-radius: 50%;
+    background: #000;
+  }
 
-    &:hover {
-      border-right: 7px solid hsl(348, 100%, 61%);
-    }
+  &.hide + .sidebar-toggler {
+    background: transparent;
+    border: 1px solid #000;
+  }
+}
+
+@media (max-width: 1050px) {
+  aside + .sidebar-toggler {
+    left: 15px;
   }
 }
