--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,9 @@ $title-color: maroon;
 
 .markdown-body {
   background: #d8f4f7;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 
   h1 { color: $title-color; }
 }
