--- a/src/components/Layout/Aside/styles.scss
+++ b/src/components/Layout/Aside/styles.scss
@@ -82,8 +82,8 @@ aside {
     &.active {
       &::before {
         position: absolute;
-        left: -20px;
-        content: "►";
+        left: -15px;
+        content: "●";
       }
 
       &:hover {
